--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: 狼一样的男人
 SEOTitle: 狼一样的男人
-header-img: img/post-bg-desk.jpg
+header-img: img/index-bar.jpg
 email: 1192880999@qq.com
 description: "狼一样的男人，狗一样的自尊."
 keyword: "狼, 狼男,狼一样的男人, 殷金良, 聊天, iOS, Apple, iPhone"
